# TechChallenge_mle_2022-10-14

./: README.md  SOLUTION.md
modules/de/: README.md
modules/de/dags/: load_client_data.py
modules/de/db_admin/: setup_users.sql
modules/de/docker/: Dockerfile
modules/de/plugins/: get_conn_string.py  get_files.py
modules/deployment/: run_test.sh
modules/deployment/tests/: test.py
modules/ds/ds_package/src/data_science/: fetch_data.py  modelling.py
modules/mle/: EXTRA TASKS.md  IMPLEMENTATION.md
modules/mle/mle_package/: LICENCE  README.md  pyproject.toml  setup.cfg
modules/mle/mle_package/src/machine_learning_engineering/: mle_model.py
